# CompisProject

./: Automaton.cpp  Automaton.h  CMakeLists.txt  ConvertPostfix.cpp  ConvertPostfix.h  DState.cpp  DState.h  KernelItem.cpp  KernelItem.h  LexerScanner.cpp  LexerScanner.h  PredictiveParser.cpp  PredictiveParser.h  Production.cpp  Production.h  README.md  Symbol.cpp  Symbol.h  SyntaxValidator.cpp  SyntaxValidator.h  VideosLaboratorios.txt  main.cpp
Automaton/: Automaton.cpp  ConvertPostfix.cpp  DState.h  Node.cpp  Node.h  SyntacticTree.cpp  SyntacticTree.h
Parser/: AutomatonP.cpp  AutomatonP.h  KernelItem.cpp  KernelItem.h  Node.cpp  Node.h  Production.cpp  Production.h  SLR.cpp  SLR.h  State.cpp  State.h  Symbol.cpp  Symbol.h
